even more translations

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -564,7 +564,7 @@
         }
 
         .task-list:empty::before {
-            content: 'Keine Aufgaben';
+            content: 'No Tasks';
             display: block;
             text-align: center;
             color: #aaa;
